@@ -1,6 +1,10 @@
 # Configuration for feature checks. Generated by generate_check_config.py.
 include(CheckCXXSourceCompiles)
 try_compile(
+    PQXX_HAVE_ASSUME ${PROJECT_BINARY_DIR}
+    SOURCES ${PROJECT_SOURCE_DIR}/config-tests/PQXX_HAVE_ASSUME.cxx
+)
+try_compile(
     PQXX_HAVE_CHARCONV_FLOAT ${PROJECT_BINARY_DIR}
     SOURCES ${PROJECT_SOURCE_DIR}/config-tests/PQXX_HAVE_CHARCONV_FLOAT.cxx
 )
