@@ -4,6 +4,7 @@ PACKAGE_NAME	internal	autotools
 PACKAGE_STRING	internal	autotools
 PACKAGE_TARNAME	internal	autotools
 PACKAGE_VERSION	internal	autotools
+PQXX_HAVE_ASSUME	public	compiler
 PQXX_HAVE_CHARCONV_INT	internal	compiler
 PQXX_HAVE_CHARCONV_FLOAT	internal	compiler
 PQXX_HAVE_CMP	public	compiler
