@@ -1,4 +1,14 @@
 # Configuration for feature checks. Generated by generate_check_config.py.
+AC_MSG_CHECKING([PQXX_HAVE_ASSUME])
+PQXX_HAVE_ASSUME=yes
+AC_COMPILE_IFELSE(
+    [read_test(PQXX_HAVE_ASSUME.cxx)],
+    AC_DEFINE(
+        [PQXX_HAVE_ASSUME],
+        1,
+        [Define if this feature is available.]),
+    PQXX_HAVE_ASSUME=no)
+AC_MSG_RESULT($PQXX_HAVE_ASSUME)
 AC_MSG_CHECKING([PQXX_HAVE_CHARCONV_FLOAT])
 PQXX_HAVE_CHARCONV_FLOAT=yes
 AC_COMPILE_IFELSE(
