@@ -4,6 +4,7 @@
  - Don't call`/bin/true`; macOS doesn't have it.  Just call `true`. (#885)
  - Deprecate `exec_prepared()`; just use `exec()` with a `pqxx::prepped`.
  - Deprecate `exec1()` etc.  Use `result::expect_rows()` etc.
+ - Fix error-reporting crash in non-blocking connection constructor. (#894)
 7.9.2
  - Fix CMake documentation install. (#848)
  - More CMake build fix. (#869)
